--- a/src/MainComponents/Profile.css
+++ b/src/MainComponents/Profile.css
@@ -5,7 +5,7 @@
     display: grid;
     grid-template-areas: 'header header '
                           'left  right';
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     grid-template-rows: 100px 1fr;
     column-gap: 20px;
     row-gap: 50px;
