--- a/src/Side-Components/MyProfile.css
+++ b/src/Side-Components/MyProfile.css
@@ -25,7 +25,7 @@
 }
 .myprofile-container > .logo > img{
     width:30%;
-    box-shadow:  0 0 2px 3px   #05a7ff;
+    box-shadow:  0 0 2px 3px   #fcc66f;
     border: 2px solid var(--match-color);
     border-radius: 50%;
 
@@ -45,13 +45,13 @@
 .myprofile > .image-box > img{
     width: 100%;
     border-radius: 0 30px;
-    border: solid var(--match-color);
+    border: solid  #fcc66f;
 }
 
 .myprofile > figcaption{
     font-family: 'roboto';
     font-size: 1.5rem;
-    color: var(--match-color);
+    color: var(--side-color);
     ;
  
 }
@@ -61,6 +61,7 @@
     font-weight: bold;
     padding: 5px;
     background-color: var( --match-color);
+    background-color: #fcc66f;
    color: var( --side-color);
    margin-top: 10px;
 }
@@ -75,7 +76,8 @@
     display: grid;
     align-items: center;
     padding: 10px;
-    box-shadow: inset 0 0 3px 2px   #05a7ff;
+    box-shadow: inset 0 0 3px 2px  var(--side-color);
+
 
 }
 
@@ -92,9 +94,12 @@
     }
 
     .contact-info > div >div:first-of-type {
-        color: var( --match-color);
+        color: #fcc66f;
     }
     
     .contact-info > div >div:last-of-type {
-        color: #05a7ff;
+        color: var( --side-color);
+        font-family: 'roboto';
+        font-weight: bold;
+        text-shadow: 0px 0px 4px var(--lightcream); 
     }
