--- a/src/Side-Components/MyProfile.css
+++ b/src/Side-Components/MyProfile.css
@@ -9,13 +9,13 @@
   
   .myprofile-container{
     display: grid;
-    grid-auto-flow: row;
     grid-template-rows: 100px 1fr 1fr;
     justify-content: center;
     width: 100%;
     height: 100vh;
     padding: 0px 20px 0 20px;
     overflow-y: scroll;
+  
 
 }
 .myprofile-container > .logo{
@@ -102,4 +102,8 @@
         font-family: 'roboto';
         font-weight: bold;
         text-shadow: 0px 0px 4px var(--lightcream); 
+    }
+
+    @media only screen and (max-width: 600px) {
+        
     }
