--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
                         'side main';
 
   grid-template-columns: 250px 1fr;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: 100px 1fr;
 
 }
 
