--- a/src/Side-Components/MyProfile.css
+++ b/src/Side-Components/MyProfile.css
@@ -8,44 +8,31 @@
   }
   
   .myprofile-container{
-    display: grid;
-    grid-template-rows: 100px 1fr 1fr;
+
     justify-content: center;
     width: 100%;
     height: 100vh;
-    padding: 0px 20px 0 20px;
-    overflow-y: scroll;
-  
+}
 
-}
-.myprofile-container > .logo{
-    width: 100%;
-    display: grid;
-    place-items: center;
-}
-.myprofile-container > .logo > img{
-    width:30%;
-    box-shadow:  0 0 2px 3px   #fcc66f;
-    border: 2px solid var(--match-color);
-    border-radius: 50%;
 
-}
 .myprofile {
+    width: 100%;
     text-align: center;
-    padding: 20px 40px 0 40px;
-    margin-bottom: 50px;
-
+    padding: 20px 30px 0 30px;
+ 
 }
-
 
 .myprofile > .image-box {
     width: 100%;
 
 }
+
 .myprofile > .image-box > img{
-    width: 100%;
+    width: 70%;
     border-radius: 0 30px;
-    border: solid  #fcc66f;
+    border: 6px solid  var(--side-color);
+    box-shadow:  0 0 3px 2px  var(--deepbrown-color);
+
 }
 
 .myprofile > figcaption{
@@ -67,9 +54,10 @@
 }
 
 .contact-info {
-    padding: 0 30px;
+    margin: 0 10px;
     justify-content: center;
     align-items: start;
+    margin-top: 50px;
 }
 
 .icon-box{
@@ -77,7 +65,6 @@
     align-items: center;
     padding: 10px;
     box-shadow: inset 0 0 3px 2px  var(--side-color);
-
 
 }
 
@@ -104,6 +91,4 @@
         text-shadow: 0px 0px 4px var(--lightcream); 
     }
 
-    @media only screen and (max-width: 600px) {
-        
-    }
+  
