--- a/src/Header-Components/Header.css
+++ b/src/Header-Components/Header.css
@@ -13,7 +13,10 @@ header{
     display: grid;
     grid-template-columns: 200px 1fr;
     column-gap: 20px;
+
 }
+
+
 
 
 header > h1{
@@ -76,10 +79,18 @@ header > ul> li:hover::after{
         text-align: center;
    
     }
-    header > ul {
-        display: grid;
-        grid-auto-rows: auto;
-        column-gap: 0px;
-        border-radius: 0px;
-    }
+header > ul {
+    display: grid;
+/*     grid-template-columns: repeat(auto-fill, minmax(auto, 1fr));
+ */   grid-auto-flow: row;
+    align-items: center;
+ 
+    justify-content: center;
+    row-gap: 10px;
+}
+
+
+
+    
+    
   }
