--- a/src/MainComponents/Portfolio.css
+++ b/src/MainComponents/Portfolio.css
@@ -5,15 +5,16 @@
     background-color: #07527de7;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));   
-     column-gap: 20px;
+    column-gap: 20px;
     padding: 0 10px ;
 
 
 }
 .main-porfolio > section >div:last-of-type {
-    position: relative;
+    display: grid;
+    place-items: center;
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     margin-top: 20px;
     text-align: center; 
 }
@@ -21,22 +22,24 @@
 .main-porfolio > section >div:last-of-type > button {
     font-family: 'roboto';
     font-size: 1.2rem;
-    position: absolute; 
-    top: 45%; 
-    left: 50%; 
-    color: var(--match-color);
+    font-family: 'Bungee';
+    color: var(--lightcream);
     background-color:var(--side-color);
-    box-shadow: inset 0px 0px 2px 3px var(--match-color);
+    box-shadow:  0px 0px 2px 3px var(--lightcream);
     padding: 10px 40px;
-    transform: translate(-50%, -50%);
-    border: 1px solid var(--match-color);
+    border: 1px solid var(--deepbrown-color);
     outline: none; 
+    transition: background-color 1.5s ease-in-out ;
     
 }
 
 
 .main-porfolio > section >div:last-of-type > button:hover{
     cursor: pointer;
+    background-color: var(--lightcream);
+    color: var(--side-color);
+    box-shadow:  0px 0px 2px 3px var(--deepbrown-color);
+
  
 }
 
@@ -61,7 +64,7 @@
     font-family: 'roboto';
     line-height: 1.4rem;
     padding: 10px;
-    color:  rgb(247, 238, 227);;
+    color:  rgb(247, 238, 227);
 
 
 }
