--- a/src/Header-Components/Header.css
+++ b/src/Header-Components/Header.css
@@ -77,13 +77,16 @@ header > ul> li:hover::after{
     }
     header > h1{
         text-align: center;
-   
+        font-size: 1.2rem;
     }
 header > ul {
     display: grid;
 /*     grid-template-columns: repeat(auto-fill, minmax(auto, 1fr));
  */   grid-auto-flow: row;
     align-items: center;
+
+    border-radius: 0px;
+    
  
     justify-content: center;
     row-gap: 10px;
