--- a/src/Header-Components/Header.css
+++ b/src/Header-Components/Header.css
@@ -81,13 +81,9 @@ header > ul> li:hover::after{
     }
 header > ul {
     display: grid;
-/*     grid-template-columns: repeat(auto-fill, minmax(auto, 1fr));
- */   grid-auto-flow: row;
+    grid-template-rows: repeat(3, 1fr);
     align-items: center;
-
     border-radius: 0px;
-    
- 
     justify-content: center;
     row-gap: 10px;
 }
