--- a/src/MainComponents/Home.css
+++ b/src/MainComponents/Home.css
@@ -4,13 +4,14 @@
     width: 100%;
     height: 100vh;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2fr 1fr;
     column-gap: 10px;
     padding: 10% 10px;
     position: relative;
     background-image: url('../assets/mainbg2.png')  ;
     background-repeat: no-repeat;
     background-size: cover;
+  
 }
 
 .hire-me {
@@ -60,12 +61,12 @@
     color: white; 
 }
 
-
-
-
-    .about-main  >section:first-of-type{ 
+.about-main  >section:first-of-type{ 
         width: 100%;
-    }
+        display: grid;
+        place-items: center;
+        
+}
     
 .about-main  >section:first-of-type >p{ 
     font-family: 'Crimson Pro';
@@ -75,30 +76,90 @@
     color: var(--match-color);
     color: #faebd7;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 5); 
-
-    margin-bottom: 40px;
+    margin-bottom: 20px;
  
 }
 
 
 
-.about-main  >section:first-of-type >div{ 
+.logos-container{ 
     display:grid;
-    grid-auto-flow: column;
-    justify-content: center;
+    grid-auto-flow: row;
+    row-gap: 10px;
+    align-items: center;
+    place-items: center;
+    margin-bottom: 30px;
+    border-top:1px solid #faebd7 ;
+/*     box-shadow: 2px 2px 8px rgba(0, 0, 0, 5); */    
+    padding: 20px
+};
 
+#media{
+    
 }
-
-.about-main  >section:first-of-type >div > img{
+.logos-container > p {
+    font-family: 'Bungee', sans-serif;
+    color: var(--side-color);
+    color:aliceblue;
+}
+.logos-container .logos >img{
     width: 2rem;
     margin-right: 20px;
-    box-shadow: 2px 2px 4px antiquewhite; 
-
+    box-shadow: 2px 2px 4px antiquewhite;
+    transition: transform 0.8s ;
 }
 
-.about-main  >section:first-of-type >div > img:hover{
+
+.logos-container >  .logos >p{
+    text-align: center;
+    font-family: 'Bungee', sans-serif;
+    color: aliceblue;
+}
+
+.logos-container .logos >img:hover{
     cursor: pointer;
+    transform: scale(1.2);
 }
+.contact{}
+
+.about-main .contact{
+    display:grid;
+    grid-auto-flow: row;
+    row-gap: 10px;
+    align-items: center;
+    place-items: center;
+    display: none;
+}
+
+
+.about-main .contact > p{
+    text-align: center;
+    font-family: 'Bungee', sans-serif;
+    color: aliceblue;
+} 
+
+.about-main .contact > div {
+    display: grid;
+    grid-auto-flow: column;
+    place-items: center;
+    column-gap: 10px;
+
+}
+
+.about-main .contact > div .contact-icon{
+    font-size: 1.5rem;
+    color: #fcc66f;
+
+}
+
+
+.about-main .contact > div p{
+    font-family: 'roboto';
+    font-weight: bold;
+    color: aliceblue;
+    
+}
+
 
 
 
@@ -135,6 +196,10 @@
     }
     .hire-me{
         display: none;
+    }
+
+    .about-main .contact{
+        display: grid;
     }
 
   }
