--- a/src/MainComponents/Home.css
+++ b/src/MainComponents/Home.css
@@ -68,7 +68,7 @@
         
 }
     
-.about-main  >section:first-of-type >p{ 
+.about-main  >section:first-of-type >strong >p{ 
     font-family: 'Crimson Pro';
     font-size: 2rem;
     line-height: 2;
@@ -76,7 +76,7 @@
     color: var(--match-color);
     color: #faebd7;
     text-shadow: 2px 2px 8px rgba(0, 0, 0, 5); 
-    margin-bottom: 20px;
+  
  
 }
 
@@ -86,7 +86,6 @@
     display:grid;
     grid-auto-flow: row;
     row-gap: 10px;
-    align-items: center;
     place-items: center;
     margin-bottom: 30px;
     border-top:1px solid #faebd7 ;
@@ -120,7 +119,6 @@
     cursor: pointer;
     transform: scale(1.2);
 }
-.contact{}
 
 .about-main .contact{
     display:grid;
