I need a node js icon and did some modifications

--- a/src/MainComponents/Profile.css
+++ b/src/MainComponents/Profile.css
@@ -9,7 +9,7 @@
     grid-template-rows: 100px 1fr;
     column-gap: 20px;
     row-gap: 50px;
-    background-color:  #007cb9;
+    background-color:  #005792;
     }
    
  
